--- a/package.json
+++ b/package.json
@@ -7,11 +7,24 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.11",
+    "@react-navigation/bottom-tabs": "6.6.1",
+    "@react-navigation/native-stack": "6.11.0",
+    "@types/styled-components-react-native": "5.2.5",
+    "dayjs": "1.11.13",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-gesture-handler": "2.20.0",
+    "react-native-reanimated": "3.15.4",
+    "react-native-safe-area-context": "4.11.0",
+    "react-native-screens": "3.34.0",
+    "react-native-svg": "15.7.1",
+    "react-native-svg-transformer": "1.5.0",
+    "styled-components": "6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -24,6 +37,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-styled-components": "2.1.4",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
