--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "3.15.4",
     "react-native-safe-area-context": "4.11.0",
     "react-native-screens": "3.34.0",
+    "react-native-splash-screen": "3.3.0",
     "react-native-svg": "15.7.1",
     "react-native-svg-transformer": "1.5.0",
     "styled-components": "6.1.13"
@@ -37,6 +38,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "5.0.2",
     "babel-plugin-styled-components": "2.1.4",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
