feat: Add dark theme and fix app color

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "@screens/*": ["./screens/*"],
       "@styles/*": ["./styles/*"],
       "@navigation/*": ["./navigation/*"],
+      "@theme/*": ["./theme/*"],
     },
   },
 }
