--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native/codegen": "0.75.4",
     "@react-navigation/bottom-tabs": "6.6.1",
     "@react-navigation/native-stack": "6.11.0",
+    "@reduxjs/toolkit": "2.2.8",
+    "@types/react-redux": "7.1.34",
     "@types/styled-components-react-native": "5.2.5",
     "dayjs": "1.11.13",
     "react": "18.3.1",
@@ -26,6 +28,8 @@
     "react-native-splash-screen": "3.3.0",
     "react-native-svg": "15.7.1",
     "react-native-svg-transformer": "1.5.0",
+    "react-redux": "9.1.2",
+    "redux-thunk": "3.1.0",
     "styled-components": "6.1.13"
   },
   "devDependencies": {
