--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'"
   },
   "dependencies": {
+    "@react-native-community/cli": "14.1.1",
+    "@react-native-community/eslint-config": "3.2.0",
     "@react-native-community/masked-view": "0.1.11",
     "@react-native/codegen": "0.75.4",
     "@react-navigation/bottom-tabs": "6.6.1",
